# Web-Parser

./: README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/classifier_models/: feature_selector.joblib  lr_multilabel.joblib  mlb.joblib  naive_bayes_multilabel.joblib  tfidf_vectorizer.joblib  thresholds_lr_multilabel.pkl  thresholds_naive_bayes_multilabel.pkl  thresholds_random_forest_multilabel.pkl
backend/migrations/: env.py
backend/migrations/versions/: 07118f1eec08_add_cleaned_flag_to_article.py  0e5d3ad97d74_merge_heads.py  add_dataset_split.py  fa287010cabc_create_articles_table.py  fix_dataset_split_values.py
backend/public/templates/: articles.html
backend/src/: config.py  server.py
backend/src/classifiers/: article_classifier.py  incremental_classifier.py  model_comparison.py  predict.py  tag_analyzer.py  test_predict.py  test_predict_multilabel.py
backend/src/database/: __init__.py  dependencies.py
backend/src/database/models/: __init__.py  article.py
backend/src/database/repositories/: __init__.py  article_repository.py
backend/src/handlers/: __init__.py  articles.py
backend/src/schemas/: article.py
backend/src/scrapers/: clean_articles.py  scraper.py
backend/src/scrapers/stealth_scripts/evasions/: navigator.webdriver.js
backend/src/scripts/: split_dataset.py
backend/src/services/: article_service.py
frontend/: package-lock.json
frontend/src/: main.js
