[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "faststream>=0.5.34",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "cachetools>=5.5.2",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "jinja2>=3.1.6",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    "setuptools>=80.9.0",
    "fake-useragent>=1.4.0",
    "importlib-metadata>=7.1.0",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
