[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "contractions>=0.1.73",
    "fake-useragent==2.2.0",
    "fast-depends==2.4.12",
    "fastapi==0.115.12",
    "faststream==0.5.39",
    "greenlet==3.2.0",
    "h11==0.14.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "inflect>=7.5.0",
    "jinja2==3.1.6",
    "joblib>=1.5.1",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.3",
    "playwright==1.52.0",
    "playwright-stealth==1.0.6",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pyee==13.0.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "spacy>=3.8.7",
    "sqlalchemy==2.0.40",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "zipp==3.22.0",
]
